configure jib base image